<resources>
    <string name="app_name">eMart</string>
    <string name="text">Text</string>
    <string name="show_more">Show more</string>
    <string name="product_image">Product Image</string>
    <string name="cart">Cart</string>
    <string name="product_name">Product name</string>
    <string name="_2_item_s">2 item\'s</string>
    <string name="inr_550_22">INR 550.22</string>
    <string name="dec">-</string>
    <string name="inc">+</string>
    <string name="save">Save</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="openTgl">Open</string>
    <string name="closeTgl">Close</string>

    <string name="electronic">Electronic Products</string>
    <string name="korean">Korean Fashion</string>
    <string name="kids">Kids outfits</string>
    <string name="foot">Foot Wear</string>
    <string name="health">Health Products</string>
    <string name="babycare">Baby Care Products</string>
</resources>