<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="42dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageProductCart"
        android:layout_width="42dp"
        android:layout_height="match_parent"
        android:src="@drawable/placeholder"
        android:scaleType="fitCenter"
        android:contentDescription="@string/product_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameProductCart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:paddingLeft="20dp"
            android:layout_marginEnd="60dp"
            android:textStyle="bold"
            android:paddingRight="20dp"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="60dp"
            android:layout_weight="5"
            android:weightSum="10">

            <TextView
                android:id="@+id/totalProductCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:text="@string/_2_item_s"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawablePadding="10dp"
                android:textColor="@color/black"
                app:drawableLeftCompat="@drawable/ic_item_box" />

            <TextView
                android:id="@+id/priceProductCart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="start"
                android:textColor="#2196F3"
                android:text="@string/inr_550_22"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textStyle="bold"
                android:layout_weight="5"/>
        </LinearLayout>


    </LinearLayout>

    <ImageView
        android:id="@+id/productRemove"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:scaleType="centerCrop"
        android:layout_marginStart="-50dp"
        android:src="@drawable/remove"
        android:contentDescription="@string/text" />




</LinearLayout>